--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
     "axios": "^0.19.2",
+    "immer": "^6.0.5",
     "next": "^9.4.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
