--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.9.14",
     "axios": "^0.19.2",
     "immer": "^6.0.5",
