--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "repository": "git@github.com:AndariasSilvanus/warung-pintar-technical-test.git",
   "author": "@andarias_silvanus <asilvanus5@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=12.16.3",
+    "yarn": ">=1.22.4"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
@@ -20,5 +26,15 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^10.0.4",
+    "@types/jest": "^25.2.2",
+    "babel-jest": "^26.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest": "^26.0.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.13.1"
   }
 }
